[package]
name = "babelscribe-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
time = { version = "0.3", features = ["macros", "formatting"] }
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4"] }
dashmap = "6.0"
anyhow = "1.0"
dotenvy = "0.15"
rand = "0.8"
